tests/error/match_error/12unsupported_pattern2.py
from guppylang import guppy

@guppy.struct
class Point:
    x: int
    y: int

@guppy
def main(p: Point) -> None:
    match p:
        case Point(_, _) as x:
            z = 44

main.check()
